# betting-agent.io

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml
models/: tuned_params_lightgbm.json  tuned_params_xgboost.json
src/sba/: __init__.py  backtest.py  cli.py  config.py  daily_scan.py  elo.py  features.py  importance.py  model.py  park_factors.py  picks.py  props.py  report.py  runline_totals.py  starter_features.py  team_offense_features.py  tracking.py  tuning.py  umpire_features.py
src/sba/data/: bref_http.py  bref_players.py  bref_slate.py  mlb_stats.py  odds.py  stadiums.py  starters.py  statcast_data.py  team_game_stats.py  weather.py
tests/: test_bref_players.py  test_bref_slate.py  test_daily_scan.py  test_elo.py  test_features.py  test_mlb_stats.py  test_model.py  test_odds.py  test_picks.py  test_props.py  test_report.py  test_tracking.py
